# src/main/java/com/deemor/ttsai/dto/alert/AlertPage.java
@@ -1,0 +1,16 @@
+package com.deemor.ttsai.dto.alert;
+
+import lombok.*;
+
+import java.util.List;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class AlertPage {
+    private List<AlertDto> requests;
+    private Integer totalNumberOfPages;
+    private Integer totalNumberOfElements;
+}
